--- a/SushistarNgApp/src/styles.css
+++ b/SushistarNgApp/src/styles.css
@@ -1,1 +1,75 @@
-/* You can add global styles to this file, and also import other style files */
+/* css profile page */
+
+.profile-page {
+  padding: 20px;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.profile-body {
+  display: flex;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.content {
+  flex: 3; /* Aumenta lo spazio per il contenuto principale */
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+}
+
+
+.profile-body > app-user-menu {
+  flex: 1; /* Occupa una parte del contenitore */
+  max-width: 300px; /* Larghezza fissa per il menu laterale */
+}
+
+.profile-body > app-order-history {
+  flex: 2; /* Occupa il resto dello spazio disponibile */
+}
+
+.user-menu {
+  background-color: #f8e5c3;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.user-menu p {
+  margin: 10px 0;
+  padding-left: 10px;
+  font-size: 1.2rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.user-menu p:hover {
+  background-color: #ffebcd;
+}
+
+.user-menu .active {
+  color: #d82e5e;
+  font-weight: bold;
+  border-left: 5px solid #d82e5e;
+}
+
+.logout-section {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.logout-btn {
+  background-color: #ff6f00;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: background-color 0.3s;
+}
+
+.logout-btn:hover {
+  background-color: #e65c00;
+}
