Implementazione dei casi di testing per gli use case UC3

--- a/SushistarNgApp/src/components/header/header.component.html
+++ b/SushistarNgApp/src/components/header/header.component.html
@@ -9,7 +9,8 @@
   <div class="menu-h">
     <!-- Menu accanto alle icone -->
     <ul class="menu">
-      <li><a routerLink="/menu" routerLinkActive="active">Menù</a></li>
+		<li><a routerLink="/menu" routerLinkActive="active">Menù</a></li>
+		<li><a routerLink="/productRegistration" routerLinkActive="active">Add Product</a></li>
     </ul>
 
     <div class="user-actions">
