--- a/SushistarNgApp/src/components/product-registration/product-registration.component.html
+++ b/SushistarNgApp/src/components/product-registration/product-registration.component.html
@@ -1,52 +1,71 @@
-<h1>Add Product Template</h1>
+<div class="modal-body" style="margin-top: 20px; margin-left: 40px;">
+	<form [formGroup]="productForm" (ngSubmit)="submitForm()">
 
-<a routerLink="/home">Go Back</a> <br>
-
-<form [formGroup]="productForm" (ngSubmit)="submitForm()">
-
-	<div class="form-group">
-		<label for="productName">Product Name: </label>
-		<input type="text" class="form-control" id="productName" formControlName="productName" />
-		<div *ngIf="checkValue('productName')">
-			Name is required.
+		<div>
+			<div class="form-group">
+				<label for="productName">Product Name: </label>
+				<input type="text" class="form-control" id="productName" formControlName="productName" />
+				<div class="error-message" *ngIf="checkValue('productName')">
+					Name is required.
+				</div>
+			</div>
+			<div class="form-group">
+				<label for="price">Price: </label>
+				<input type="number" class="form-control" id="price" formControlName="price" />
+				<div class="error-message" *ngIf="checkValue('price')">
+					Price is required.
+				</div>
+			</div>
+			
+			<div class="form-group">
+				<label for="description">Description: </label>
+				<textarea type="text" class="form-control" id="description" 
+					formControlName="description" maxlength="500">
+				</textarea>
+				<div class="error-message" *ngIf="checkValue('description')">
+					Product description is required.
+				</div>
+			</div>
 		</div>
-	</div>
+	
 
-	<div class="form-group">
-		<label for="description">Description: </label>
-		<textarea type="text" class="form-control" id="description" formControlName="description"></textarea>
-		<div *ngIf="checkValue('description')">
-			Product description is required.
+	
+		<div class="form-group">
+			<label for="amount">Amount: </label>
+			<input type="number" class="form-control" id="amount" formControlName="amount" />
+			<div class="error-message" *ngIf="checkValue('amount')">
+				Amount is required.
+			</div>
 		</div>
-	</div>
 
-	<div class="form-group">
-		<label for="price">Price: </label>
-		<input type="number" class="form-control" id="price" formControlName="price" />
-		<div *ngIf="checkValue('price')">
-			Price is required.
+		<!--
+			
+		<div class="form-group">
+			<label for="productName">Category: </label>
+			<select type="number" class="form-control" id="categoryId" formControlName="categoryId">
+				<option value="" disabled>Select...</option>
+				<option [ngValue]="1">Drink</option>
+				<option [ngValue]="2">Nigiri</option>
+				<option [ngValue]="3">Steamed Ravioli</option>
+				<option [ngValue]="4">Maki</option>
+				<option [ngValue]="5">Desserts</option>	
+			</select>		
 		</div>
-	</div>
-
-	<div class="form-group">
-		<label for="amount">Amount: </label>
-		<input type="number" class="form-control" id="amount" formControlName="amount" />
-		<div *ngIf="checkValue('amount')">
-			Amount is required.
+		-->
+	
+		<div class="form-group">
+			<label for="productName">Category: </label>
+			<select type="number" class="form-control" id="categoryId" formControlName="categoryId">
+				<option value="" disabled hidden>Select...</option>
+				<option *ngFor="let category of categories" [value]="category.id">
+					{{category.categoryName}}
+				</option>
+			</select>		
 		</div>
-	</div>
-
-	<div class="form-group">
-		<label for="productName">Category: </label>
-		<select type="number" class="form-control" id="categoryId" formControlName="categoryId">
-			<option value="" disabled>Select...</option>
-			<option [ngValue]="1">Drink</option>
-			<option [ngValue]="2">Nigiri</option>
-			<option [ngValue]="3">Steamed Ravioli</option>
-			<option [ngValue]="4">Maki</option>
-			<option [ngValue]="5">Desserts</option>	
-		</select>		
-	</div>
-
-	<button type="submit" [disabled]="!productForm.valid">Submit</button>
-</form>
+	
+		<div class="buttonFooter">
+			<button class="closeButton" type="button" (click)="hideForm()">Close</button>
+			<button type="submit" [disabled]="!productForm.valid">Submit</button>
+		</div>
+	</form>
+</div>
