--- a/SushistarNgApp/src/components/cart/cart.component.html
+++ b/SushistarNgApp/src/components/cart/cart.component.html
@@ -21,7 +21,7 @@
   <div class="cart-summary" *ngIf="cart && cart.products?.length > 0">
     <h3>Riepilogo</h3>
     <p>Totale: {{ cart.total | currency:'EUR' }}</p>
-    <button class="checkout-button">Checkout</button>
+    <button class="checkout-button" (click)="checkout()">Checkout</button>
   </div>
 
 </div>
