--- a/SushistarNgApp/src/components/menu/menu.component.html
+++ b/SushistarNgApp/src/components/menu/menu.component.html
@@ -1,8 +1,8 @@
 <app-header></app-header>
 
 <div *ngIf="isUserAdmin()" style="margin-top: 20px; margin-left: 10px;">
-	<button class="sushiButton" *ngIf="!isAddProductVisibile" (click)="showAddProductForm()">Add Product</button>
-	<button class="sushiButton closeButton" *ngIf="isAddProductVisibile" (click)="hideAddProductForm()">Close</button>
+	<button class="sushiButton" *ngIf="!isAddProductVisibile" (click)="showAddProductForm()">Aggiungi prodotto</button>
+	<button class="sushiButton closeButton" *ngIf="isAddProductVisibile" (click)="hideAddProductForm()">Chiudi</button>
 	<!-- Modulo di aggiunta prodotti -->
 	<div *ngIf="isAddProductVisibile">
 		<app-product-registration></app-product-registration>
