Modifiche all'aggiunta di un prodotto: dopo che il prodotto viene inserito viene visualizzata la pagina del dettaglio

--- a/SushistarNgApp/src/components/dish/dish.component.html
+++ b/SushistarNgApp/src/components/dish/dish.component.html
@@ -6,7 +6,7 @@
 
   <!-- Informazioni sul piatto -->
   <div class="dish-info">
-    <a [routerLink]="['/product', name]">{{ name }}</a>
+    <a [routerLink]="['/product', id]">{{ name }}</a>
     <p>{{ description }}</p>
   </div>
 
